java-auth/k8s/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-auth-staging
  labels:
    environment: staging
