java-auth/k8s/overlays/staging/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-auth
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: java-auth
